--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -98,7 +98,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>.\OGL_Application\;.\OGL_Application\src\ApplicationObject\;.\OGL_Application\src\UI\input;.\OGL_Application\src\cluster;.\OGL_Application\src\sound;.\OGL_Application\src\assets;.\OGL_Application\src\shadersFacility;.\OGL_Application\src\Physics\Physics\AdvancedPhysics;.\OGL_Application\src\Physics\Physics;.\OGL_Application\DEPENDENCIES\LIBRARIES\glfw-3.3.2\glfw-3.3.2\include\GLFW;.\OGL_Application\DEPENDENCIES\SB7;.\OGL_Application\DEPENDENCIES\freetype-windows-binaries-master\freetype-windows-binaries-master\include\freetype;.\OGL_Application\DEPENDENCIES\freetype-windows-binaries-master\freetype-windows-binaries-master\include;.\OGL_Application\src\saveloadhelper\SaveLoadHelper_headers;.\OGL_Application\include\;.\OGL_Application\src\cameraTransformations;.\OGL_Application\src\ApplicationObject\DerivedObjects;.\OGL_Application\src\ApplicationObject\Collectors;.\OGL_Application\src\ApplicationObject\ApplicationObject;.\OGL_Application\src\Objects\;.\OGL_Application\src\Objects\ActiveObjects\;.\OGL_Application\include\UI;.\OGL_Application\DEPENDENCIES\MathLibAndMore;.\OGL_Application\DEPENDENCIES\glm-0.9.9.7\glm\glm;.\OGL_Application\DEPENDENCIES\SOIL2-master\SOIL2-master\src\SOIL2;.\OGL_Application\DEPENDENCIES\irrKlang-64bit-1.6.0\include;$(IncludePath)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\OGL_Application\src\UI\buttons;.\OGL_Application\src\application;.\OGL_Application\src\;.\OGL_Application\;.\OGL_Application\src\ApplicationObject\;.\OGL_Application\src\UI\textrenderer;.\OGL_Application\src\UI\userinterface;.\OGL_Application\src\UI\printhelper;.\OGL_Application\src\UI\input;.\OGL_Application\src\cluster;.\OGL_Application\src\sound;.\OGL_Application\src\assets;.\OGL_Application\src\shadersFacility;.\OGL_Application\src\Physics\Physics\AdvancedPhysics;.\OGL_Application\src\Physics\Physics;.\OGL_Application\DEPENDENCIES\LIBRARIES\glfw-3.3.2\glfw-3.3.2\include\GLFW;.\OGL_Application\DEPENDENCIES\SB7;.\OGL_Application\DEPENDENCIES\freetype-windows-binaries-master\freetype-windows-binaries-master\include\freetype;.\OGL_Application\DEPENDENCIES\freetype-windows-binaries-master\freetype-windows-binaries-master\include;.\OGL_Application\src\saveloadhelper\SaveLoadHelper_headers;.\OGL_Application\include\;.\OGL_Application\src\cameraTransformations;.\OGL_Application\src\ApplicationObject\DerivedObjects;.\OGL_Application\src\ApplicationObject\Collectors;.\OGL_Application\src\ApplicationObject\ApplicationObject;.\OGL_Application\src\Objects\;.\OGL_Application\src\Objects\ActiveObjects\;.\OGL_Application\include\UI;.\OGL_Application\DEPENDENCIES\MathLibAndMore;.\OGL_Application\DEPENDENCIES\glm-0.9.9.7\glm\glm;.\OGL_Application\DEPENDENCIES\SOIL2-master\SOIL2-master\src\SOIL2;.\OGL_Application\DEPENDENCIES\irrKlang-64bit-1.6.0\include;$(IncludePath)</AdditionalIncludeDirectories>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ShowIncludes>true</ShowIncludes>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -141,10 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="OGL_Application\include\app.h" />
-    <ClInclude Include="OGL_Application\include\application.h" />
+    <ClInclude Include="OGL_Application\src\Application\app.h" />
+    <ClInclude Include="OGL_Application\src\Application\application.h" />
     <ClInclude Include="OGL_Application\src\ApplicationObject\Collectors\activeObjectCollector.h" />
     <ClInclude Include="OGL_Application\Global_definitions\global_definition.h" />
+    <ClInclude Include="OGL_Application\src\Objects\sphere\sphere_external\Sphere_external.h" />
     <ClInclude Include="OGL_Application\src\Objects\sphere\Textured_sphere\textured_sphere.h" />
     <ClInclude Include="OGL_Application\src\Objects\Surface\textured_surface\textured_surface.h" />
     <ClInclude Include="OGL_Application\src\shadersFacility\shaderObject.h" />
@@ -168,8 +169,8 @@
     <ClInclude Include="OGL_Application\src\saveloadhelper\SaveLoadHelper_headers\cameraLoader.h" />
     <ClInclude Include="OGL_Application\src\saveloadhelper\SaveLoadHelper_headers\collectorLoader.h" />
     <ClInclude Include="OGL_Application\src\saveloadhelper\SaveLoadHelper_headers\saver.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttonEditSounds.h" />
-    <ClInclude Include="OGL_Application\include\UI\inputs.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttonEditSounds.h" />
+    <ClInclude Include="OGL_Application\src\UI\input\inputs.h" />
     <ClInclude Include="OGL_Application\include\log.h" />
     <ClInclude Include="OGL_Application\DEPENDENCIES\MathLibAndMore\mymathlib.h" />
     <ClInclude Include="OGL_Application\src\Physics\Physics\body.h" />
@@ -188,7 +189,7 @@
     <ClInclude Include="OGL_Application\include\SB7\gl3w.h" />
     <ClInclude Include="OGL_Application\include\SB7\glcorearb.h" />
     <ClInclude Include="OGL_Application\include\SB7\sb7ktx.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttonfunctionLoader.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttonfunctionLoader.h" />
     <ClInclude Include="OGL_Application\src\shadersFacility\shadermanager.h" />
     <ClInclude Include="OGL_Application\src\shadersFacility\shaders.h" />
     <ClInclude Include="OGL_Application\include\vmath.h" />
@@ -201,13 +202,13 @@
     <ClInclude Include="OGL_Application\src\Objects\Box_physical\Box_physical.h" />
     <ClInclude Include="OGL_Application\src\Objects\point\point.h" />
     <ClInclude Include="OGL_Application\src\Objects\Surface\surface\surface.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttonEditObject.h" />
-    <ClInclude Include="OGL_Application\include\UI\PrintHelper.h" />
-    <ClInclude Include="OGL_Application\include\UI\userInterface.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttonMap.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttons.h" />
-    <ClInclude Include="OGL_Application\include\UI\textRenderer.h" />
-    <ClInclude Include="OGL_Application\include\UI\buttonsList.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttonEditObject.h" />
+    <ClInclude Include="OGL_Application\src\UI\printHelper\PrintHelper.h" />
+    <ClInclude Include="OGL_Application\src\UI\userInterface\userInterface.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttonMap.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttons.h" />
+    <ClInclude Include="OGL_Application\src\UI\textRenderer\textRenderer.h" />
+    <ClInclude Include="OGL_Application\src\UI\Buttons\buttonsList.h" />
     <ClInclude Include="OGL_Application\src\Objects\triangle\triangle_b.h" />
     <ClInclude Include="OGL_Application\src\Objects\triangle\triangle_tb\triangle_tb.h" />
     <ClInclude Include="OGL_Application\src\Objects\viewfinder\viewfinder.h" />
@@ -224,10 +225,11 @@
     <ClInclude Include="OGL_Application\include\timing.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OGL_Application\src\app.cpp" />
-    <ClCompile Include="OGL_Application\src\application.cpp" />
+    <ClCompile Include="OGL_Application\src\Application\app.cpp" />
+    <ClCompile Include="OGL_Application\src\Application\application.cpp" />
     <ClCompile Include="OGL_Application\src\ApplicationObject\applicationObjectManager_saveLoad.cpp" />
     <ClCompile Include="OGL_Application\Global_definitions\global_definition.cpp" />
+    <ClCompile Include="OGL_Application\src\Objects\sphere\sphere_external\Sphere_external.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\sphere\Textured_sphere\textured_sphere.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\Surface\textured_surface\textured_surface.cpp" />
     <ClCompile Include="OGL_Application\src\shadersFacility\shaderObject.cpp" />
@@ -255,15 +257,15 @@
     <ClCompile Include="OGL_Application\src\UI\Buttons\EditObject\buttonEditObject_editCluster.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\EditObject\ButtonEditObject_editSize.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\EditObject\buttonEditObject_moveObject.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\printHelperCollector.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\printHelper\printHelperCollector.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\startButton\buttonStart_MAIN_CALLBACK_FUNCTION.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\startButton\buttonStart_activeCharacterCluster.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\startButton\editGames_menuFunctions.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\startButton\file_menuFunctions.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\userInterface.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\userInterface\userInterface.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\buttonMap.cpp" />
     <ClCompile Include="OGL_Application\src\UI\Buttons\buttons.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\printHelper.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\printHelper\printHelper.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\projectile\projectile.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\sphere\sphere\sphere.cpp" />
     <ClCompile Include="OGL_Application\src\external_src\gl3w.c" />
@@ -303,7 +305,7 @@
     <ClCompile Include="OGL_Application\src\Objects\gun\gun.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\point\point.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\Surface\surface\surface.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\textRenderer.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\textRenderer\textRenderer.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\triangle\triangle_b.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\triangle\triangle_tb\triangle_tb.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\viewfinder\viewfinder.cpp" />
@@ -329,6 +331,8 @@
   <ItemGroup>
     <None Include="OGL_Application\src\Objects\grid\grid.frag" />
     <None Include="OGL_Application\src\Objects\grid\grid.vert" />
+    <None Include="OGL_Application\src\Objects\sphere\sphere_external\Sphere_external.frag" />
+    <None Include="OGL_Application\src\Objects\sphere\sphere_external\Sphere_external.vert" />
     <None Include="OGL_Application\src\Objects\Surface\GroundSurface\groundSurface.frag" />
     <None Include="OGL_Application\src\Objects\Surface\GroundSurface\groundSurface.vert" />
     <None Include="OGL_Application\src\Objects\Box_nonPhysical\Box_nonPhysical.frag" />
